--- a/survey_example_appfolder/templates/survey_example_appfolder/Welcome.html
+++ b/survey_example_appfolder/templates/survey_example_appfolder/Welcome.html
@@ -7,12 +7,11 @@
 
 {% block content %}
 <br>
-<h2> Survey Example </h2>
+<h2> Hello and welcome to my survey </h2>
     <hr>
-    Welcome to the first session of the tutorial. Here we are just going to have  a look at the very basic structure of otre.
+  Some text, some data
+<br>
 
-    <!-- This is the most basic way of implementing an input field -->
-    {{ formfield "entry_question"}}
 
    <button class="otree-btn-next btn btn-primary next-button otree-next-button">
     Next
