--- a/survey_example_appfolder/templates/survey_example_appfolder/EndPage.html
+++ b/survey_example_appfolder/templates/survey_example_appfolder/EndPage.html
@@ -12,7 +12,7 @@
 
     <h2>End of Survey</h2>
 
-    Thank you for your participation in this survey!
+    Thank you for your participation in this survey! You can close this window.
 
 
 {% endblock %}
