--- a/survey_example_appfolder/templates/survey_example_appfolder/Welcome.html
+++ b/survey_example_appfolder/templates/survey_example_appfolder/Welcome.html
@@ -7,9 +7,10 @@
 
 {% block content %}
 <br>
-<h2> Hello and welcome to my survey </h2>
+<h2> Hello and welcome to my survey. This short survey is called "First wave" and asks some  questions.  </h2>
     <hr>
-  Some text, some data
+  This is the welcome page, so you can click to the next page.
+<br>
 <br>
 
 
