--- a/survey_example_appfolder/templates/survey_example_appfolder/DemoPage.html
+++ b/survey_example_appfolder/templates/survey_example_appfolder/DemoPage.html
@@ -9,29 +9,42 @@
 <br>
 <h2> Survey Example </h2>
 <hr>
-This is a demo page
+This is the page where you have to answer my question.
+<br>
 
 <!-- This is the most basic way of implementing an input field -->
-{{ formfield "age_question"}}
+<p><b>How much money do earn per month?</b></p>
+{{ formfield "money_question"}}
 
 <!-- This is the most basic way of implementing error handling -->
-{{ formfield_errors 'age_question' }}
+{{ formfield_errors 'money_question' }}
 
 <!-- This is a more advances way of implementing a question -->
 <!-- the type says what kind of input "field" you would like, the name has to 
 be the same as on models.py and the value is what will be displayed in your dataset
 if the option is clicked -->
 
-<p><b>Which gender do you identify with?</b></p>
-<input type="radio" name="gender" value="1" /> Male
+<p><b>Which type of cafeteria food do you prefer?</b></p>
+<input type="radio" name="food" value="1" /> Seezeit-teller
 <br>
-<input type="radio" name="gender" value="2" /> Female
+<input type="radio" name="food" value="2" /> KombinierBar
 <br>
-<input type="radio" name="gender" value="3" /> Divers
+<input type="radio" name="food" value="3" /> Hin & Weg
 <br>
-<input type="radio" name="gender" value="4" /> Prefer not to say
+<input type="radio" name="food" value="4" />  Salad bar
+<br>
+<input type="radio" name="food" value="5" />  I eat only from my own fridges
 <br>
 <br>
+
+
+<!-- This is the most basic way of implementing an input field -->
+<b>What is, all in all, your favorite food?</b>
+{{ formfield "favot_question"}}
+
+<!-- This is the most basic way of implementing error handling -->
+{{ formfield_errors 'favot_question' }}
+
 
 <!-- we can also have variables that are not displayed and work in the background -->
 <input type="hidden" name="hidden_input">
